...
            Text(
                text = product.content.take(30) + if (product.content.length > 30) "..." else "",
                style = MaterialTheme.typography.bodySmall
            )
        }
        IconButton(onClick = onDelete) {
            Icon(Icons.Filled.Delete, contentDescription = "DeleteButton")
        }
    }
    HorizontalDivider()
}

