...
    navigateToBasketPage: () -> Unit
) {
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text(text = stringResource(id = R.string.Basket),
                    modifier = Modifier.testTag("Basket")) },
                navigationIcon = {
                    IconButton(onClick = backIcon) {
                        Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "BackFromBasket")
                    }
                }
            )
        },
        bottomBar = {
            BottomBar(
...
